# edu_diff_engine2

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  test_engine.py
src/api/: base_question_api.py  dummy_api.py  groq_client.py  openai_question_api.py
src/core/: __init__.py  dynamic_rubric_generator.py  engine.py  question_models.py  rubric_models.py
src/utils/: pdf_loader.py
